--- a/frontend/src/app/components/admin/boardGame/board-game-settings/board-game-settings.component.css
+++ b/frontend/src/app/components/admin/boardGame/board-game-settings/board-game-settings.component.css
@@ -1,8 +1,7 @@
 .container-block{
-    width: 100%;
-    height: 100%;
-}
-
-h2{
-    text-align: center;
+    padding: 2rem;
+    min-width: 300px;
+    max-width: 1550px;
+    margin-left: auto;
+    margin-right: auto;
 }
