--- a/frontend/src/app/components/admin/boardGame/board-game-settings/board-game-settings.component.html
+++ b/frontend/src/app/components/admin/boardGame/board-game-settings/board-game-settings.component.html
@@ -1,18 +1,92 @@
 <div class="container-block">
-    <div class="header">
-      <h2>Board Game Settings</h2>
-    </div>
-    <!-- <div class="card flex justify-content-center">
-        <p-selectButton [options]="editOptions" [(ngModel)]="value" [multiple]="false" optionLabel="name" optionValue="value"></p-selectButton>
-    </div> -->
-    <!-- <div class="edit-sections">
-      <div>
+  <p-toolbar styleClass="mb-4 gap-2">
+    <ng-template pTemplate="left">
+      <div style="width: 100px;"></div>
+    </ng-template>
+    <ng-template pTemplate="center">
+      <h3 class="m-0">Manage Board Games</h3>
+  </ng-template>
+    <ng-template pTemplate="right">
+      <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2" (click)="openNew()"></button>
+      <button pButton pRipple icon="pi pi-trash" class="p-button-danger" disabled></button> 
+    </ng-template>
+  </p-toolbar>
+
+  <p-table
+        #dt
+        [value]="games"
+        [rows]="10"
+        [paginator]="true"
+        [globalFilterFields]="['name', 'publisher', 'players', 'age']"
+        [tableStyle]="{ 'min-width': '75rem' }"
+        [(selection)]="selectedGames"
+        [rowHover]="true"
+        dataKey="id"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        [showCurrentPageReport]="true"
+    >
+        <ng-template pTemplate="caption">
+            <div class="flex align-items-center justify-content-between">
+                <div style="width: 10px;"></div>
+                <span class="p-input-icon-left">
+                    <i class="pi pi-search"></i>
+                    <input pInputText type="text" (input)="dt.filterGlobal($any($event).target.value, 'contains')" placeholder="Search..." />
+                </span>
+            </div>
+        </ng-template>
+        <ng-template pTemplate="header">
+            <tr>
+                <th style="width: 4rem">
+                    <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                </th>
+                <th pSortableColumn="name" style="min-width:15rem">Name <p-sortIcon field="name"></p-sortIcon></th>
+                <th>Image</th>
+                <th pSortableColumn="publisher">Publisher <p-sortIcon field="publisher"></p-sortIcon></th>
+                <th pSortableColumn="players" style="min-width:10rem">Players <p-sortIcon field="players"></p-sortIcon></th>
+                <th pSortableColumn="time">Time <p-sortIcon field="time"></p-sortIcon></th>
+                <th pSortableColumn="age" style="min-width:10rem">Age <p-sortIcon field="age"></p-sortIcon></th>
+                <th></th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-game>
+            <tr>
+                <td>
+                    <p-tableCheckbox [value]="game"></p-tableCheckbox>
+                </td>
+                <td>{{ game.name }}</td>
+                <td><img [src]="game.imageUrl" [alt]="game.name" width="50" class="shadow-4" /></td>
+                <td>{{ game.publisher}}</td>
+                <td>{{ game.players }}</td>
+                <td>{{ game.time }}</td>
+                <td>{{ game.age }}</td>    
+                <td>
+                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"></button>
+                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"></button>
+                </td>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="summary">
+            <div class="flex align-items-center justify-content-between">In total there are {{ games ? games.length : 0 }} board games.</div>
+        </ng-template>      
+    </p-table>
+</div>
+
+<p-dialog [(visible)]="productDialog" [style]="{ width: '450px' }" header="Add Board Game" [modal]="true" styleClass="p-fluid">
+  <ng-template pTemplate="content">
+      <!-- <img [src]="game.imageUrl" [alt]="game.name" class="block m-auto pb-3" *ngIf="game.imageUrl" />
+      <div class="field">
+          <label for="name">Name</label>
+          <input type="text" pInputText id="name" [(ngModel)]="game.name" required autofocus />
+          <small class="p-error" *ngIf="submitted && !game.name">Name is required.</small>
       </div>
-      
-      <div>
-      </div>
-      
-      <div>
-      </div>
-    </div> -->
-  </div>
+      <div class="field">
+          <label for="description">Description</label>
+          <textarea id="description" pInputTextarea [(ngModel)]="game.description" required rows="3" cols="20"></textarea>
+      </div> -->
+  </ng-template>
+
+  <ng-template pTemplate="footer">
+      <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
+      <button pButton pRipple label="Add" icon="pi pi-check" class="p-button-text" (click)="addGame()"></button>
+  </ng-template>
+</p-dialog>
