--- a/frontend/src/app/components/admin/boardGame/board-game-settings/board-game-settings.component.css
+++ b/frontend/src/app/components/admin/boardGame/board-game-settings/board-game-settings.component.css
@@ -5,3 +5,13 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+::ng-deep .p-dialog{
+    max-height: 80%;
+}
+
+@media screen and (max-width: 500px) {
+    ::ng-deep .p-dialog{
+        width: 90% !important;
+    }
+}
