--- a/frontend/src/app/components/user-profile/profile/profile.component.css
+++ b/frontend/src/app/components/user-profile/profile/profile.component.css
@@ -121,8 +121,6 @@
     width: 80%;
     border-radius: 5%;
     object-fit: cover;
-    transition: background-color 0.3s;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5); 
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -152,7 +150,15 @@
     justify-content: flex-end;
     margin-top: 0.5em;
 }
-
+@media screen and (max-width: 767px) {
+    .image-box{
+        width: 70%;
+    }
+    
+    .image-box img{
+        width: 80%;
+    }
+}
 
 @media screen and (max-width: 500px) {
     .user-right-details{
