--- a/frontend/src/app/components/boardGame/top-games/top-games.component.html
+++ b/frontend/src/app/components/boardGame/top-games/top-games.component.html
@@ -4,10 +4,10 @@
             <div style="width: 200px;"></div>
         </ng-template>
         <ng-template pTemplate="center">
-          <h3 class="m-0 header">TOP 10 GAMES</h3>
+          <h3 class="m-0 header">TOP 10 BOARD GAMES</h3>
         </ng-template>
         <ng-template pTemplate="right">
-            <div class="link"><span [routerLink]="['/games']">Return to all games</span></div>
+            <div class="link"><span [routerLink]="['/games']">Back to all games</span></div>
         </ng-template>
     </p-toolbar> 
     <app-game-generic
