--- a/frontend/src/app/components/user-profile/profile/profile.component.html
+++ b/frontend/src/app/components/user-profile/profile/profile.component.html
@@ -16,10 +16,8 @@
             </ng-container>
         </div>
         <div class="user">
-            <div class="user-left-details">
-                <div class="image">
-                    <img src="../../../../assets/images/avatars/avatar2.svg"/>
-                </div>
+            <div class="avatar">
+                <p-avatar size='large' icon="pi pi-user" styleClass="mr-2" shape="circle"></p-avatar>
             </div>
             <div class="user-right-details">
                 <p class="user-info-head">Details:</p>
