--- a/frontend/src/app/components/admin/boardGame/board-game-settings/board-game-settings.component.html
+++ b/frontend/src/app/components/admin/boardGame/board-game-settings/board-game-settings.component.html
@@ -8,7 +8,7 @@
   </ng-template>
     <ng-template pTemplate="right">
       <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2" (click)="openNew()"></button>
-      <button pButton pRipple icon="pi pi-trash" class="p-button-danger" disabled></button> 
+      <button pButton pRipple  icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedGames()" [disabled]="!selectedGames || !selectedGames.length"></button> 
     </ng-template>
   </p-toolbar>
 
