--- a/frontend/src/app/components/user-profile/profile/profile.component.css
+++ b/frontend/src/app/components/user-profile/profile/profile.component.css
@@ -37,9 +37,11 @@
     margin-bottom: 4rem;
 }
 
-.user-left-details {
+.avatar {
     display: flex;
-    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    padding-left: 10px;
 }
 
 .user-right-details{
@@ -61,16 +63,6 @@
     font-size: medium;
 }
 
-.user-left-details .image{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.user-left-details img{
-    width: 100px;
-}
 
 .header-down h3{
     margin: 1em 0 0 0.3em;
