--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="content">
     <router-outlet></router-outlet>
-    <p-confirmDialog defaultFocus="reject" [style]="{width: '40vw'}"></p-confirmDialog>
+    <p-confirmDialog defaultFocus="reject"></p-confirmDialog>
   </div>
   <p-toast position="top-right"></p-toast> 
   <footer>
