--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -34,10 +34,18 @@ footer {
   z-index: 1000;
 }
 
-
+::ng-deep .p-dialog{
+  width: 40vw;
+}
 @media only screen and (max-width: 1000px) {
   .content{
     margin-top: 70px;
+  }
+}
+
+@media only screen and (max-width: 768px){
+  ::ng-deep .p-dialog {
+    width: 80vw; 
   }
 }
 
