--- a/frontend/src/app/components/nav/navbar/navbar.component.css
+++ b/frontend/src/app/components/nav/navbar/navbar.component.css
@@ -118,5 +118,22 @@
   cursor: pointer;
 }
 
+/* .end-menu{
+  height: 100%;
+}
+.end-menu span{
+ margin-right: 30px;
+ color: #ffffff;
+ cursor: pointer;
+ height: 100%;
+}
+
+.end-menu span:hover{
+  background: #034c8b;
+ }
+
+.end-menu span i{
+  margin-right: 20px;
+} */
 
 
