--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -7,7 +7,11 @@
           <span class="board-game-title" >Board Game App</span>
         </div>
       </ng-template>
-      <ng-template pTemplate="end">     
+      <ng-template pTemplate="end" >  
+        <!-- <div class="end-menu">
+          <span *ngIf="!isLoggedIn" [routerLink]="['/login']"><i class="pi pi-sign-in"></i>Login</span>
+        <span *ngIf="!isLoggedIn" [routerLink]="['/register']"><i class="pi pi-user-plus"></i>Register</span>
+        </div> -->
       </ng-template>
     </p-menubar>
   </div>
