--- a/frontend/src/app/components/boardGame/game-add-form/game-add-form.component.css
+++ b/frontend/src/app/components/boardGame/game-add-form/game-add-form.component.css
@@ -1,13 +1,3 @@
-.pi-heart-fill{
-    color: #8a8a8a;
-}
-.highlighted{
-    color: #ff0000;
-}
-
-::ng-deep .p-rating .p-rating-item.p-rating-item-active .p-rating-icon{
-    color: #ffd000;
-}
 .header-add-form{
     display: flex;
     align-items: center;
@@ -21,12 +11,20 @@
     flex-grow: 1;
     text-align: center;
     font-weight: bold;
-  }
+}
   
-  .header-add-form .left, .header-add-form .right {
+.header-add-form .left, .header-add-form .right {
     flex-shrink: 0;
-  }
+}
 
+.header-add-form .right {
+    cursor: pointer;
+}
+
+/* .header-add-form .right:hover {
+    color: #343a40;
+    background: #e9ecef;
+} */
 
 .favourites-label {
     display: block;
@@ -96,6 +94,17 @@ input::placeholder {
     color: #ff5252; 
     margin: 0 0 5px 0;
 } 
+
+.pi-heart-fill{
+    color: #8a8a8a;
+}
+.highlighted{
+    color: #ff0000;
+}
+
+::ng-deep .p-rating .p-rating-item.p-rating-item-active .p-rating-icon{
+    color: #ffd000;
+}
 
 @media only screen and (min-width: 601px) and (max-width: 1000px) {
     .container{
