add status styling and change status userRequest on front

--- a/frontend/src/app/components/admin/board-game-settings/board-game-settings.component.css
+++ b/frontend/src/app/components/admin/board-game-settings/board-game-settings.component.css
@@ -20,4 +20,8 @@ input{
     ::ng-deep .p-dialog{
         width: 90% !important;
     }
+    ::ng-deep .p-dialog{
+        margin-top: 50px;
+    }
+    
 }
