--- a/frontend/src/app/components/boardGame/game-generic/game-generic.component.html
+++ b/frontend/src/app/components/boardGame/game-generic/game-generic.component.html
@@ -1,6 +1,9 @@
-<p-dataView #dv [value]="games" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[10, 25, 50, 100]" filterBy="name">
+<p-dataView #dv [value]="games" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[10, 25, 50, 100]" filterBy="name,rating,publisher" [sortField]="sortField" [sortOrder]="sortOrder">
     <ng-template pTemplate="header">
         <div class="flex flex-col md:flex-row justify-content-between">
+            <div class="md:ml-2">
+                <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sort By" (onChange)="onSortChange($event)" styleClass="mb-2 md:mb-0" [style]="{'min-width':'15em'}"></p-dropdown> 
+            </div>
             <div class="mb-2 md:mb-0">
             <span class="p-input-icon-left mb-2 md:mb-0 search">
                 <i class="pi pi-search"></i>
