--- a/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.html
+++ b/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.html
@@ -11,9 +11,12 @@
                 <div class="fav-game-link"><span (click)="triggerCallback()">{{buttonName}}</span></div>
             </ng-template>
         </p-toolbar>
-        <p-dataView #dv [value]="userInfo.userBoardGames"  [paginator]="true" [rows]="10" [rowsPerPageOptions]="[5, 10, 15, 100]" layout="grid" filterBy="name">
+        <p-dataView #dv [value]="userInfo.userBoardGames"  [paginator]="true" [rows]="10" [rowsPerPageOptions]="[5, 10, 15, 100]" layout="grid" filterBy="name" [sortField]="sortField" [sortOrder]="sortOrder">
             <ng-template pTemplate="header">
                 <div class="flex flex-col md:flex-row justify-content-between">
+                    <div class="md:ml-2">
+                        <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sort By" (onChange)="onSortChange($event)" styleClass="mb-2 md:mb-0" [style]="{'min-width':'15em'}"></p-dropdown> 
+                    </div>
                     <div class="mb-2 md:mb-0">
                     <span class="p-input-icon-left mb-2 md:mb-0 search">
                         <i class="pi pi-search"></i>
